[project]
name = "class-data-analysis-ii-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "takahiro",email = "takam@wakayama-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "plotnine (>=0.15.1,<0.16.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
flake8 = "^7.3.0"
black = "^25.11.0"

